# interview-task

./: .gitignore  pyproject.toml  setup.cfg
app/: main.py
tests/: __init__.py  test.py
