[tool.poetry]
name = "interview-task"
version = "1.0"
description = "An interview task solution"
authors = ["JuliaGrebennikova <ygrebennikova@nes.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"
mypy = "^0.931"
autopep8 = "^1.6.0"
flake8-pytest-style = "^1.6.0"
flake8-SQL = "^0.4.1"
flake8-annotations = "^2.7.0"
flake8-logging-format = "^0.6.0"
flake8-coding = "^1.3.2"
flake8-spellcheck = "^0.24.0"
isort = "^5.10.1"
pytest = "^6.2.5"
black = "^21.12b0"
pytest-cov = "^3.0.0"
pytest-timeout = "^2.1.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
